--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,8 @@ twitter_username: your-twitter-handle # DO NOT include the @ character, or else 
 github_username:  austinblizard # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
+
+---
+title: "My Blog"
+date: 2021-01-23
+---
