--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author: Austin Blizard
 email: apbliz2004@gmail.com
 theme: minima
 description: > # this means to ignore newlines until "baseurl:"
-  Hi, I'm Austin, I'm 16 & I currently work at Walgreens!
+  Hi, I'm Austin, I'm 17 & I work at Walgreens!
 
 # social links
 instagram_username: austinblizard # DO NOT include the @ character, or else the build will fail!
